# ovos-ocp-audio-plugin

./: README.md  pyproject.toml
examples/: srch.py
ovos_plugin_common_play/ocp/: gui.py  player.py
ovos_plugin_common_play/ocp/res/gui/py-htmx/: PlayerLoader.py  SuggestionsView.py  busy.py
requirements/: requirements.txt
src/ovos_plugin_common_play/: __init__.py
src/ovos_plugin_common_play/ocp/res/gui/py-htmx/: PlayerLoader.old  PlayerLoader.py
test/ovos-test-mycroft-audio-plugin/: pyproject.toml
test/ovos-test-mycroft-audio-plugin/src/ovos_test_mycroft_audio_plugin/: __init__.py
test/ovos-test-ocp-audio-plugin/: pyproject.toml
test/ovos-test-ocp-audio-plugin/src/ovos_test_ocp_audio_plugin/: __init__.py
test/unittests/: test_audio_backends.py  test_external_ocp.py  test_media_intents.py  test_ocp.py  test_ocp_player.py
