[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ovos_plugin_common_play = [
    "**/*.qml",
    "**/qmdir",
    "**/*.json",
    "**/*.js",
    "**/*.dialog",
    "**/*.entity",
    "**/*.intent",
    "**/*.voc",
    "**/*.svg",
    "**/*.gif",
    "**/*.png",
]

[tool.hatch.version]
path = "src/ovos_plugin_common_play/__version__.py"

[project]
name = "ovos-plugin-common-play"
keywords = ["ovos", "plugin", "audio", "common", "play", "ocp"]
dynamic = ["version"]
authors = [
  { name="JarbasAi", email="jarbasai@mailfence.com" },
]
description = "OCP - OpenVoiceOS Common Play plugin"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "ovos-plugin-manager>=0.0.26,<2.0.0",
    "ovos_bus_client>=0.0.7,<2.0.0",
    "ovos-utils>=0.1.0,<1.0.0",
    "ovos-workshop>=2.4.2,<8.0.0",
    "padacioso>=0.1.1,<2.0.0",
    "dbus-next",
]

[project.optional-dependencies]
extra = [
    "ovos-ocp-youtube-plugin>=0.0.1,<1.0.0",
    "ovos-ocp-rss-plugin>=0.0.2,<1.0.0",
    "ovos-ocp-m3u-plugin>=0.0.1,<1.0.0",
    "ovos-ocp-news-plugin>=0.1.0,<1.0.0",
    "ovos_audio_plugin_simple>=0.0.1,<1.0.0",
    "ovos-ocp-files-plugin~=0.13",
]
test = [
    "build",
    "wheel",
    "pytest~=7.1",
    "pytest-timeout~=2.1",
    "pytest-cov~=4.1",
    "ovos-core~=0.0.7",
    "ovos-audio",
    "ovos-utils>=0.1.0a17,<1.0.0",
    # TODO: Below patching skills_lgpl pyyaml dependency per https://github.com/yaml/pyyaml/issues/724
    "adapt-parser~=0.5",
    "padacioso~=0.1.2",
    "ovos-lingua-franca~=0.4,>=0.4.2",
    "PyYAML~=6.0",
    "padatious~=0.4.8",
    "fann2==1.0.7",
]
all = [
    "test_self_dep[docs,tests]"
]

[project.urls]
Homepage = "https://github.com/OpenVoiceOS/ovos-ocp-audio-plugin"
Issues = "https://github.com/OpenVoiceOS/ovos-ocp-audio-plugin/issues"

[project.entry-points."mycroft.plugin.audioservice"]
"ovos_common_play" = "ovos_plugin_common_play"

[project.entry-points."mycroft.plugin.audioservice.config"]
"ovos_common_play.config" = "ovos_plugin_common_play:OCPPluginConfig"

[project.scripts]
"ovos-ocp-standalone" = "ovos_plugin_common_play.launcher:main"
